--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,11 +311,14 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: #f9f9f9;
+  background: url("../img/hero_6.png") center center no-repeat;
+  background-size: cover;
+  /*background: #f9f9f9;*/
 }
 
 #hero .container {
   padding-top: 84px;
+  color: #FFFFFF; 
 }
 
 #hero h1 {
@@ -323,12 +326,12 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 42px;
   font-weight: 700;
   line-height: 56px;
-  color: #0f394c;
+  color: #FFFFFF;
   text-transform: uppercase;
 }
 
 #hero h2 {
-  color: #1c698c;
+  color: #FFFFFF;
   margin: 10px 0 0 0;
   font-size: 20px;
 }
@@ -351,6 +354,10 @@ h1, h2, h3, h4, h5, h6 {
 #hero .btn-get-started:hover {
   background: #76c7ed;
 }
+
+#hero .hero-img img {
+    display: none;
+  }
 
 @media (max-width: 991px) {
   #hero {
