--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -592,7 +592,7 @@ section {
 # Counts
 --------------------------------------------------------------*/
 .counts {
-  background: url("../img/counts-bg.jpg") center center no-repeat;
+  background: url("../img/valle_sagrado.png") center center no-repeat;
   background-size: cover;
   padding: 80px 0 60px 0;
   position: relative;
