--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,14 +311,17 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: url("../img/hero_6.png") center center no-repeat;
+  background: url("../img/hero_8.png") center center no-repeat;
   background-size: cover;
   /*background: #f9f9f9;*/
 }
 
 #hero .container {
   padding-top: 84px;
-  color: #FFFFFF; 
+}
+
+#hero .heroe{
+    background-color: rgb(255, 255, 255, 0.7);
 }
 
 #hero h1 {
@@ -326,12 +329,12 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 42px;
   font-weight: 700;
   line-height: 56px;
-  color: #FFFFFF;
+  color: #0f394c;
   text-transform: uppercase;
 }
 
 #hero h2 {
-  color: #FFFFFF;
+  color: #0f394c;
   margin: 10px 0 0 0;
   font-size: 20px;
 }
