--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,6 +198,13 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+/* botones para los cuartos */
+.reserva{
+    padding: 10px 20px;
+    border-radius:6px;
+}
+
+
 /* Mobile Navigation */
 .mobile-nav-toggle {
   position: fixed;
